add specials heading

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -139,6 +139,15 @@
           <p>select office supplies plus more great deals!</p>
           <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
         </div>
+      </div>
+    </div>
+    <div class="container section-specials">
+      <h2>Specials</h2>
+      <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3"></div>
       </div>
     </div>
     <div class="container-fluid footer">
