add sections and sidebar. todo: sidebar sections

--- a/app/index.html
+++ b/app/index.html
@@ -81,78 +81,270 @@
         </div>
       </div>
     </div>
-    <div class="featured-slider">
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-pause="false">
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <a href="#">
-              <img src="images/featured-slide-01.png" alt="Chromebooks for sale">
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="images/featured-slide-01.png" alt="Chromebooks for sale">
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="images/featured-slide-01.png" alt="Chromebooks for sale">
-            </a>
+    <div class="main-wrapper">
+    <div class="content-wrapper">
+      <div class="featured-slider">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-pause="false">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <a href="#">
+                <img src="images/featured-slide-01.png" alt="Chromebooks for sale">
+              </a>
+            </div>
+            <div class="item">
+              <a href="#">
+                <img src="images/featured-slide-01.png" alt="Chromebooks for sale">
+              </a>
+            </div>
+            <div class="item">
+              <a href="#">
+                <img src="images/featured-slide-01.png" alt="Chromebooks for sale">
+              </a>
+            </div>
           </div>
         </div>
+      </div><!--/ SLIDER -->
+      <div class="container section-shop">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="row">
+              <div class="col-lg-10 col-lg-offset-1">
+                <img src="images/microsoft-office-365.png" alt="Microsoft Office 365" class="shop-img">
+              </div>
+            </div>
+            <h3>Microsoft Office 365</h3>
+            <p>with purchase of select PCs</p>
+            <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
+          </div>
+          <div class="col-lg-4">
+            <div class="row">
+              <div class="col-lg-10 col-lg-offset-1">
+                <img src="images/cleaning-essentials.png" alt="Selected Cleaning Essencials" class="shop-img">
+              </div>
+            </div>
+            <h3>Save up to 45%</h3>
+            <p>select cleaning essentials</p>
+            <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
+          </div>
+          <div class="col-lg-4">
+            <div class="row">
+              <div class="col-lg-10 col-lg-offset-1">
+                <img src="images/office-supplies.png" alt="Office Supplies" class="shop-img">
+              </div>
+            </div>
+            <h3>Save 25% or more</h3>
+            <p>select office supplies plus more great deals!</p>
+            <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
+          </div>
+        </div>
+      </div><!--/ SHOP -->
+      <div class="container section-specials">
+        <h2>Specials</h2>
+        <div class="row">
+          <div class="col-lg-3">
+            <img src="images/special-01.jpg" alt="HP Pavilon X2" class="special-img">
+            <div class="price-info row">
+              <div class="col-lg-12">
+                <h3 class="current-price pull-left"><strong><span>$</span>295<span>.95</span></strong></h3>
+                <div class="price-meta pull-right">
+                  <p class="list-price"><small>List: $29.99</small></p>
+                  <p class="price-text">with $10 savings</p>
+                </div>
+              </div>
+            </div>
+            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+            <h3 class="product-name">HP&copy; Pavilion X2 2-in-1 laptop computer with 10.1" touch...</h3>
+            <div class="reviews">
+              <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <img src="images/special-02.jpg" alt="HP Laserjet Pro X2" class="special-img">
+            <div class="price-info row">
+              <div class="col-lg-12">
+                <h3 class="current-price pull-left"><strong><span>$</span>329<span>.99</span></strong></h3>
+                <div class="price-meta pull-right">
+                  <p class="list-price"><small>List: $399.99</small></p>
+                  <p class="price-text">with $125 savings</p>
+                </div>
+              </div>
+            </div>
+            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+            <h3 class="product-name">HP Laserjet Pro 400 MFP M425dn Monochrome Laser...</h3>
+            <div class="reviews">
+              <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <img src="images/special-03.jpg" alt="USB Extender" class="special-img">
+            <div class="price-info row">
+              <div class="col-lg-12">
+                <h3 class="current-price pull-left"><strong><span>$</span>29<span>.95</span></strong></h3>
+                <div class="price-meta pull-right">
+                  <p class="list-price"><small>List: $39.95</small></p>
+                  <p class="price-text">with $10 savings</p>
+                </div>
+              </div>
+            </div>
+            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+            <h3 class="product-name">QVS USB-CE5 USB Extender 2 ft. Long</h3>
+            <div class="reviews">
+              <p><img src="images/reviews-icon-3.jpg" alt="3 Stars"><span class="reviews-count">16 Reviews</span></p>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <img src="images/special-04.jpg" alt="Logitech Wireless Mouse" class="special-img">
+            <div class="price-info row">
+              <div class="col-lg-12">
+                <h3 class="current-price pull-left"><strong><span>$</span>19<span>.99</span></strong></h3>
+                <div class="price-meta pull-right">
+                  <p class="list-price"><small>List: $29.99</small></p>
+                  <p class="price-text">with $10 savings</p>
+                </div>
+              </div>
+            </div>
+            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+            <h3 class="product-name">Logitech&reg; M325 Wireless Mouse Black...</h3>
+            <div class="reviews">
+              <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+            </div>
+          </div>
+        </div>
+      </div><!--/ SPECIALS -->
+      <div class="container section-news">
+        <h2>What's New</h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="images/news-01.jpg" alt="The Profit" >
+            <h4>New episode and special offer</h4>
+            <p>Check out The Profit today and find out how to save big on all the gear we know you love.</p>
+            <a href="#">Learn more</a>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/news-02.jpg" alt="Business Solution Center">
+            <h4>Set your business up for success</h4>
+            <p>Get started with articles, tips and more from all the new Office Depot Business Solution Center.</p>
+            <a href="#">Learn more</a>
+          </div>
+          <div class="col-lg-4">
+            <img src="images/news-03.jpg" alt="PC Tune-up">
+            <h4>FREE PC Tune Up</h4>
+            <p>Our PC Tune-up ensures your computer is optimized, threats are indentified and scans for potencial virus issues.</p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </div><!--/ NEWS -->
+    </div><!--/ CONTENT WRAPPER -->
+    <div class="sidebar-wrapper">
+      <div class="section section-user">
+        <h2 class="section-title">My Office</h2>
       </div>
-    </div>
-    <div class="container section-shop">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <img src="images/microsoft-office-365.png" alt="Microsoft Office 365" class="shop-img">
-            </div>
-          </div>
-          <h3>Microsoft Office 365</h3>
-          <p>with purchase of select PCs</p>
-          <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
-        </div>
-        <div class="col-lg-4">
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <img src="images/cleaning-essentials.png" alt="Selected Cleaning Essencials" class="shop-img">
-            </div>
-          </div>
-          <h3>Save up to 45%</h3>
-          <p>select cleaning essentials</p>
-          <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
-        </div>
-        <div class="col-lg-4">
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <img src="images/office-supplies.png" alt="Office Supplies" class="shop-img">
-            </div>
-          </div>
-          <h3>Save 25% or more</h3>
-          <p>select office supplies plus more great deals!</p>
-          <a href="#" class="btn btn-default btn-shop btn-lg">Shop Now</a>
-        </div>
+      <div class="section section-cart">
+        <h3 class="section-title">My Cart</h3>
       </div>
-    </div>
-    <div class="container section-specials">
-      <h2>Specials</h2>
+      <div class="section section-store">
+        <h3 class="section-title">Store Near You</h3>
+        <div class="store-image">
+          <img src="images/store-location.jpg" alt="Office Depot Store">
+        </div>
+        <div class="store-address">
+          <img src="images/store-logo.jpg" alt="Office Depot Store Logo">
+          <p>8095 Glades Rd. Suite A-1 <br> Boca Raton, Florida  </p>
+        </div>
+        <p class="phone">(561) 223-2403</p>
+      </div>
+      <div class="section section-orders">
+        <h3 class="section-title">My Orders</h3>
+      </div>
+      <div class="section section-subscriptions">
+        <h3 class="section-title">Subscriptions</h3>
+      </div>
+      <div class="section section-lists">
+        <h3>List</h3>
+      </div>
+    </div><!--/SIDEBAR -->
+  </div>
+    <div class="container-fluid section-user-products">
       <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3"></div>
+        <div class="col-lg-12">
+          <nav class="user-product-menu">
+            <ul class="nav nav-pills">
+              <li class="nav-item active"><a href="#">Commonly Purchased</a></li>
+              <li class="nav-item"><a href="#">Recently Viewed</a></li>
+              <li class="nav-item"><a href="#">Recomendations</a></li>
+            </ul>
+          </nav>
+          <a href="#"><span class="toggle-content"></span></a>
+          <div class="content">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1">
+                    <div class="row">
+                      <div class="col-lg-5">
+                        <img src="images/product-01.jpg" alt="Nestl Pure Life Purified Bottled Water">
+                      </div>
+                      <div class="col-lg-7">
+                        <p class="product-name"><strong>Nestl&eacute;&reg; Pure Life Purified Bottled Water</strong></p>
+                        <h4 class="current-price"><strong><span>$</span>6<span>.99</span></strong></h4>
+                        <div class="reviews">
+                          <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1">
+                    <div class="row">
+                      <div class="col-lg-5">
+                        <img src="images/product-02.jpg" alt="Dell Inspiron 15-3000 Series Laptop">
+                      </div>
+                      <div class="col-lg-7">
+                        <p class="product-name pull-right"><strong>Dell Inspiron 15-3000 Series Laptop</strong></p>
+                        <h4 class="current-price"><strong><span>$</span>319<span>.99</span></strong></h4>
+                        <div class="reviews">
+                          <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">56 Reviews</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1">
+                    <div class="row">
+                      <div class="col-lg-5">
+                        <img src="images/product-03.jpg" alt="HP Officejet Pro 8620 E-All-in-One">
+                      </div>
+                      <div class="col-lg-7">
+                        <p class="product-name pull-right"><strong>HP Officejet Pro 8620 E-All-in-One</strong></p>
+                        <h4 class="current-price"><strong><span>$</span>189<span>.95</span></strong></h4>
+                        <div class="reviews">
+                          <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">56 Reviews</span></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container-fluid footer">
       <div class="row">
         <div class="col-xs-12">
+          <img src="images/footer-img.jpg" class="footer-img">
           <p class="print">From basic office supplies such as printer paper and labels to office equipment like file cabinets and stylish office furniture, Office Depot and OfficeMax have the office products you need to get the job done. Maintain a well-stocked office breakroom. Save on printer ink and toner to keep your office efficient and productive. Utilize our custom online printing and IT services for small businesses to stand out from the competition through our Copy &amp; Print Depot services. Create promotional products, custom business cards, custom stampers, flyers and posters to strengthen your brand. Beyond the office, our wide selection of school supplies including backpacks, notebooks, pens and laptop computers to help your student excel. Office Depot and OfficeMax have a variety of school uniforms, teacher resources, the latest technology for laptop computers and notebooks, and school supply lists to keep your back to school shopping focused.</p>
           <p><small><strong>Copyright © 2015 by Office Depot, Inc. All rights reserved.</strong>  Prices shown are in U.S. Dollars. Please login for your pricing.  Prices are subject to change. All use of the site is subject to the Terms of Use. Prices and offers on www.officedepot.com may not apply to purchases made on business.officedepot.com. See Terms of Use details.</small></p>
         </div>
