--- a/app/index.html
+++ b/app/index.html
@@ -143,77 +143,237 @@
           </div>
         </div>
       </div><!--/ SHOP -->
+
+
+
+
+
+
       <div class="container section-specials">
         <h2>Specials</h2>
-        <div class="row">
-          <div class="col-lg-3">
-            <img src="images/special-01.jpg" alt="HP Pavilon X2" class="special-img">
-            <div class="price-info row">
-              <div class="col-lg-12">
-                <h3 class="current-price pull-left"><strong><span>$</span>295<span>.95</span></strong></h3>
-                <div class="price-meta pull-right">
-                  <p class="list-price"><small>List: $29.99</small></p>
-                  <p class="price-text">with $10 savings</p>
+        <div id="carrousel-slide" class="carousel slide featured-slider" data-ride="carousel" data-pause="false" >
+
+          <ol class="carousel-indicators" style='bottom: -50px;'>
+            <li data-target="#carrousel-slide" data-slide-to="0" class="active"></li>
+            <li data-target="#carrousel-slide" data-slide-to="1"></li>
+            <li data-target="#carrousel-slide" data-slide-to="2"></li>
+          </ol>
+
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">              
+              <div class="col-lg-3">
+                <img src="images/special-03.jpg" alt="USB Extender" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>29<span>.95</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $39.95</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">QVS USB-CE5 USB Extender 2 ft. Long</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-3.jpg" alt="3 Stars"><span class="reviews-count">16 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/special-04.jpg" alt="Logitech Wireless Mouse" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>19<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $29.99</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">Logitech&reg; M325 Wireless Mouse Black...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/special-01.jpg" alt="HP Pavilon X2" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>295<span>.95</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $29.99</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">HP&copy; Pavilion X2 2-in-1 laptop computer with 10.1" touch...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/special-02.jpg" alt="HP Laserjet Pro X2" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>329<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $399.99</small></p>
+                      <p class="price-text">with $125 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">HP Laserjet Pro 400 MFP M425dn Monochrome Laser...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
                 </div>
               </div>
             </div>
-            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-            <h3 class="product-name">HP&copy; Pavilion X2 2-in-1 laptop computer with 10.1" touch...</h3>
-            <div class="reviews">
-              <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <img src="images/special-02.jpg" alt="HP Laserjet Pro X2" class="special-img">
-            <div class="price-info row">
-              <div class="col-lg-12">
-                <h3 class="current-price pull-left"><strong><span>$</span>329<span>.99</span></strong></h3>
-                <div class="price-meta pull-right">
-                  <p class="list-price"><small>List: $399.99</small></p>
-                  <p class="price-text">with $125 savings</p>
+            <div class="item">   
+              <div class="col-lg-3">
+                <img src="images/hp-pc.jpeg" alt="HP Pavilion TouchSmart" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>379<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $29.99</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">HP Pavilion TouchSmart ...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/desk-brown.jpeg" alt="Sauder® Heritage Hill" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>339<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $339.99</small></p>
+                      <p class="price-text">with $125 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">Sauder® Heritage Hill ...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/pen.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 245px; height: 245px;'>
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>13<span>.49</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $13.49</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium 1.0mm ...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-3.jpg" alt="3 Stars"><span class="reviews-count">16 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/pen-red.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 245px; height: 245px;'>
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>13<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $13.99</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium 1.0mm ...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
                 </div>
               </div>
             </div>
-            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-            <h3 class="product-name">HP Laserjet Pro 400 MFP M425dn Monochrome Laser...</h3>
-            <div class="reviews">
-              <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <img src="images/special-03.jpg" alt="USB Extender" class="special-img">
-            <div class="price-info row">
-              <div class="col-lg-12">
-                <h3 class="current-price pull-left"><strong><span>$</span>29<span>.95</span></strong></h3>
-                <div class="price-meta pull-right">
-                  <p class="list-price"><small>List: $39.95</small></p>
-                  <p class="price-text">with $10 savings</p>
+            <div class="item">         
+              <div class="col-lg-3">
+                <img src="images/special-01.jpg" alt="HP Pavilon X2" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>295<span>.95</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $29.99</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">HP&copy; Pavilion X2 2-in-1 laptop computer with 10.1" touch...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/special-02.jpg" alt="HP Laserjet Pro X2" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>329<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $399.99</small></p>
+                      <p class="price-text">with $125 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">HP Laserjet Pro 400 MFP M425dn Monochrome Laser...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/hp-pc.jpeg" alt="HP Pavilion TouchSmart" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>379<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $29.99</small></p>
+                      <p class="price-text">with $10 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">HP Pavilion TouchSmart ...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <img src="images/desk-brown.jpeg" alt="Sauder® Heritage Hill" class="special-img">
+                <div class="price-info row">
+                  <div class="col-lg-12">
+                    <h3 class="current-price pull-left"><strong><span>$</span>339<span>.99</span></strong></h3>
+                    <div class="price-meta pull-right">
+                      <p class="list-price"><small>List: $339.99</small></p>
+                      <p class="price-text">with $125 savings</p>
+                    </div>
+                  </div>
+                </div>
+                <p class="special-info">Limit: 2 Expires 03/07/2015</p>
+                <h3 class="product-name">Sauder® Heritage Hill ...</h3>
+                <div class="reviews">
+                  <p><img src="images/reviews-icon-4.jpg" alt="4 Stars"><span class="reviews-count">22 Reviews</span></p>
                 </div>
               </div>
             </div>
-            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-            <h3 class="product-name">QVS USB-CE5 USB Extender 2 ft. Long</h3>
-            <div class="reviews">
-              <p><img src="images/reviews-icon-3.jpg" alt="3 Stars"><span class="reviews-count">16 Reviews</span></p>
-            </div>
           </div>
-          <div class="col-lg-3">
-            <img src="images/special-04.jpg" alt="Logitech Wireless Mouse" class="special-img">
-            <div class="price-info row">
-              <div class="col-lg-12">
-                <h3 class="current-price pull-left"><strong><span>$</span>19<span>.99</span></strong></h3>
-                <div class="price-meta pull-right">
-                  <p class="list-price"><small>List: $29.99</small></p>
-                  <p class="price-text">with $10 savings</p>
-                </div>
-              </div>
-            </div>
-            <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-            <h3 class="product-name">Logitech&reg; M325 Wireless Mouse Black...</h3>
-            <div class="reviews">
-              <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
-            </div>
-          </div>
+
+            
+
         </div>
       </div><!--/ SPECIALS -->
       <div class="container section-news">
