add sidebar tmp

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="main-wrapper">
     <div class="content-wrapper">
-      <div class="featured-slider">
+      <div class="container featured-slider">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-pause="false">
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -241,7 +241,7 @@
       </div><!--/ NEWS -->
     </div><!--/ CONTENT WRAPPER -->
     <div class="sidebar-wrapper">
-      <div class="section section-user">
+      <!--<div class="section section-user">
         <h2 class="section-title">My Office</h2>
       </div>
       <div class="section section-cart">
@@ -266,7 +266,9 @@
       </div>
       <div class="section section-lists">
         <h3>List</h3>
-      </div>
+      </div>-->
+      <img src="images/office-sidebar.jpg" class="sidebar-tmp">
+      <a href="#"><span class="close-sidebar"></span></a>
     </div><!--/SIDEBAR -->
   </div>
     <div class="container-fluid section-user-products">
