--- a/app/index.html
+++ b/app/index.html
@@ -232,7 +232,7 @@
             </div>
             <div class="item">   
               <div class="col-lg-3">
-                <img src="images/hp-pc.jpeg" alt="HP Pavilion TouchSmart" class="special-img">
+                <img src="images/hp-pc.jpeg" alt="HP Pavilion TouchSmart" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>379<span>.99</span></strong></h3>
@@ -249,7 +249,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/desk-brown.jpeg" alt="Sauder® Heritage Hill" class="special-img">
+                <img src="images/desk-brown.jpeg" alt="Sauder® Heritage Hill" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>339<span>.99</span></strong></h3>
@@ -266,7 +266,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/pen.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 245px; height: 245px;'>
+                <img src="images/pen.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>13<span>.49</span></strong></h3>
@@ -277,13 +277,13 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium 1.0mm ...</h3>
+                <h3 class="product-name">TUL BP3 Ballpoint, Retractable ...</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-3.jpg" alt="3 Stars"><span class="reviews-count">16 Reviews</span></p>
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/pen-red.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 245px; height: 245px;'>
+                <img src="images/pen-red.jpeg" alt="TUL BP3 Ballpoint" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>13<span>.99</span></strong></h3>
@@ -294,7 +294,7 @@
                   </div>
                 </div>
                 <p class="special-info">Limit: 2 Expires 03/07/2015</p>
-                <h3 class="product-name">TUL BP3 Ballpoint, Retractable, Medium 1.0mm ...</h3>
+                <h3 class="product-name">TUL BP3 Ballpoint, Retractable ...</h3>
                 <div class="reviews">
                   <p><img src="images/reviews-icon-5.jpg" alt="5 Stars"><span class="reviews-count">33 Reviews</span></p>
                 </div>
@@ -302,7 +302,7 @@
             </div>
             <div class="item">         
               <div class="col-lg-3">
-                <img src="images/special-01.jpg" alt="HP Pavilon X2" class="special-img">
+                <img src="images/special-01.jpg" alt="HP Pavilon X2" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>295<span>.95</span></strong></h3>
@@ -319,7 +319,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/special-02.jpg" alt="HP Laserjet Pro X2" class="special-img">
+                <img src="images/special-02.jpg" alt="HP Laserjet Pro X2" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>329<span>.99</span></strong></h3>
@@ -336,7 +336,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/hp-pc.jpeg" alt="HP Pavilion TouchSmart" class="special-img">
+                <img src="images/hp-pc.jpeg" alt="HP Pavilion TouchSmart" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>379<span>.99</span></strong></h3>
@@ -353,7 +353,7 @@
                 </div>
               </div>
               <div class="col-lg-3">
-                <img src="images/desk-brown.jpeg" alt="Sauder® Heritage Hill" class="special-img">
+                <img src="images/desk-brown.jpeg" alt="Sauder® Heritage Hill" class="special-img" style='width: 255px; height: 210px;'>
                 <div class="price-info row">
                   <div class="col-lg-12">
                     <h3 class="current-price pull-left"><strong><span>$</span>339<span>.99</span></strong></h3>
